base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nganeemmanuel/room8-frontend:20250619172130
          ports:
            - containerPort: 80
          volumeMounts:
            - name: env-config-volume
              mountPath: /usr/share/nginx/html/room8/env-config.js
              subPath: env-config.js
              readOnly: true
      volumes:
        - name: env-config-volume
          secret:
            secretName: frontend-secret
